fix: remove comments